--- a/style.css
+++ b/style.css
@@ -18,19 +18,31 @@ h3#subtitle {
     font-size: 36px;
     font-family: "Papyrus", fantasy;
     margin-top: 10px;
+    margin-bottom: 75px;
+}
+
+/* format line break */
+div#break {
+    text-align: center;
+    margin-bottom: 75px;
 }
 
 /* format the three flavor categories */
 h4.flavorTitle {
     text-align: center;
     font-family: "Papyrus", fantasy;
-    font-size: 24px;
-    margin-top: 100px;
+    font-size: 36px;
+    padding-bottom: 0px;
+    margin-bottom: 10px;
 }
 
-/* center the divs containing photos for each section (with each image in a span)*/
-div#allFlavors div.flavorSection div.macPhotos {
+.flavorSection {
     text-align: center;
+}
+
+/* center the divs containing photos for each section (with each image in a div)*/
+div#allFlavors div.flavorSection div.macPhotos {
+    display: inline-flex;
 }
 
 /* center the divs containing photos for each section */
@@ -44,6 +56,42 @@ div#allFlavors div img {
 }
 
 /* add margin at bottom of page for aesthetics */
-div#funMacs {
+div.flavorSection {
     margin-bottom: 100px;
+}
+
+/* add hover style over mac photos to show flavor - from W3 schools' Fade in Overlay example */
+.container {
+    position: relative;
+    width: 50%;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #9ee2eb;
+}
+
+.container:hover .overlay {
+    opacity: 1;
+}
+
+.description {
+    color: white;
+    font-size: 30px;
+    font-family: "Papyrus", fantasy;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
