--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ div#break {
     margin-bottom: 75px;
 }
 
-/* format the three flavor categories */
+/* format the flavor categorie titles */
 h4.flavorTitle {
     text-align: center;
     font-family: "Papyrus", fantasy;
@@ -36,8 +36,10 @@ h4.flavorTitle {
     margin-bottom: 10px;
 }
 
+/* center each flavor section and add margin at bottom */
 .flavorSection {
     text-align: center;
+    margin-bottom: 100px;
 }
 
 /* center the divs containing photos for each section (with each image in a div)*/
@@ -45,19 +47,9 @@ div#allFlavors div.flavorSection div.macPhotos {
     display: inline-flex;
 }
 
-/* center the divs containing photos for each section */
-div#allFlavors div.macPhotos {
-    text-align: center;
-}
-
 /* add 25px padding to each individual macaron image */
 div#allFlavors div img {
     padding: 25px;
-}
-
-/* add margin at bottom of page for aesthetics */
-div.flavorSection {
-    margin-bottom: 100px;
 }
 
 /* add hover style over mac photos to show flavor - from W3 schools' Fade in Overlay example */
